feat: mount gRPC-gateway and Swagger UI router
